# rusty_chess

./: LICENSE  README.md
train_python/: pyproject.toml
train_python/notebooks/: 01_exploratory_analysis.ipynb  02_preprocessing.ipynb
train_rust/: Cargo.toml
train_rust/src/: main.rs
