[project]
name = "train-python"
version = "0.1.0"
description = ""
authors = [
    {name = "Lucas Siqueira",email = "siqueiraq@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "torch (>=2.7.0,<3.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "polars (>=1.27.1,<2.0.0)",
    "matplotlib (>=3.10.1,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "rich (>=14.0.0,<15.0.0)",
    "chess (>=1.11.2,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
jupyterlab = "^4.4.1"
mypy = "^1.15.0"
ruff = "^0.11.7"

[tool.ruff.lint]
preview = true
select = [ "I", "F", "E", "W", "N", "PL", "PT", "ANN", "Q", "ARG", "PD", "NPY", "FAST", "RUF", "PERF"]
ignore = ["PLR0913", "PLR0917", "PD901"]

[tool.ruff.format]
preview = true
quote-style = "double"

[tool.mypy]
ignore_missing_imports = true

[tool.ruff]
line-length = 120